--- a/apk/res/values-es/strings.xml
+++ b/apk/res/values-es/strings.xml
@@ -53,7 +53,8 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Ayer"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Leer: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Escribir: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <string name="separator" msgid="1299848322898210658">", "</string>
+    <!-- no translation found for separator (5521285473288943819) -->
+    <skip />
     <string name="manage_permissions" msgid="8394221950712608160">"Gestionar permisos"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Hora: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Actividad"</string>
@@ -321,9 +322,12 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Problemas de salud"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"problemas de salud"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Leer problemas de salud"</string>
-    <string name="immunizations_uppercase_label" msgid="8440461752746256387">"Vacunas"</string>
-    <string name="immunizations_lowercase_label" msgid="3807025074680621043">"vacunas"</string>
-    <string name="immunizations_content_description" msgid="2239351886343062194">"Leer vacunas"</string>
+    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
+    <skip />
+    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
+    <skip />
+    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
+    <skip />
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Resultados de analíticas"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"resultados de analíticas"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Leer resultados de analíticas"</string>
@@ -1131,6 +1135,12 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Ver aplicaciones compatibles"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Encuentra más aplicaciones para sincronizarlas con <xliff:g id="APP_NAME">%s</xliff:g> a través de Salud conectada"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Ver en la tienda de aplicaciones"</string>
+    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
+    <skip />
+    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
+    <skip />
+    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
+    <skip />
     <string name="select_all" msgid="837499881590001166">"Seleccionar todo"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Las aplicaciones conectadas ya no podrán leer estos datos de Salud conectada"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Marcada"</string>
@@ -1166,18 +1176,45 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Último acceso: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Último acceso: ayer, <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Último acceso: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
-    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <string name="request_permissions_allow_all_the_time" msgid="4081502779872893569">"Permitir siempre"</string>
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"Permitir seleccionados"</string>
+    <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"Mientras se usa la aplicación"</string>
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"Rechazar todos"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"¿Permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a los datos de actividad física y bienestar?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ha solicitado acceso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nElige si quieres dar todos los permisos o controlarlos individualmente."</string>
+    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"¿Permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
+    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
     <skip />
-    <!-- no translation found for request_permissions_allow_selected (218527615680495438) -->
+    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
     <skip />
-    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
     <skip />
-    <!-- no translation found for request_permissions_deny_all (4123735770293545320) -->
+    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
     <skip />
-    <!-- no translation found for wear_allow_app_access_fitness_and_wellness_data (7914569541993476826) -->
+    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
     <skip />
-    <!-- no translation found for wear_request_multiple_data_type_permissions (5348997693739610876) -->
+    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
     <skip />
-    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <!-- no translation found for allowed_to_access (4179317387300812335) -->
+    <skip />
+    <!-- no translation found for allowed_to_read (2775365229411407406) -->
+    <skip />
+    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
+    <skip />
+    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
+    <skip />
+    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
+    <skip />
+    <!-- no translation found for allowed (4158456017482263737) -->
+    <skip />
+    <!-- no translation found for not_allowed (6092523505093372147) -->
+    <skip />
+    <!-- no translation found for access_sensor_note (7949933977197789634) -->
+    <skip />
+    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
+    <skip />
+    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
+    <skip />
+    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
     <skip />
 </resources>
