Revert "Rebrand health permission group to "Fitness and wellness""
This reverts commit 8ebcaf985dc1a8035cece45cbde1a1367c4df685.

Reason for revert: Will wait for new UX decision. Also not to break CTS tests.

Change-Id: I9dd652ea907524d903be4c128c868fc1f0c02c5d

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -116,7 +116,7 @@
 
     <!-- region framework permissions -->
     <!-- Health data permissions labels and descriptions -->
-    <string name="permgrouplab_health" description="Title of an application permission group, listed so the user can choose whether they want to allow the application to do this. [CHAR LIMIT=30]">Fitness and wellness</string>
+    <string name="permgrouplab_health" description="Title of an application permission group, listed so the user can choose whether they want to allow the application to do this. [CHAR LIMIT=30]">Health&#160;Connect</string>
     <string name="permgroupdesc_health" description="Description of an application permission, listed so the user can choose whether they want to allow the application to do this. [CHAR LIMIT=100]">access your health data</string>
 
     <!-- Health data permissions labels and descriptions -->
